--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,8 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+li {
+  color: #fff;
+  font-size: 2rem;
+}
